# modpack-updater

./: Cargo.toml  README.md
src/: config.rs  ftp.rs  generate.rs  local.rs  main.rs  mrpack.rs
