[package]
name = "nexusrealms-modpack-updater"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
image = "0.25.5"
reqwest = { version ="0.12.15", features=["blocking"]}
rfd = "0.15.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3.19.1"
zip = "2.4.2"
russh = "0.52.0"
tokio = "1.44.2"
russh-sftp = "2.1.1"
dotenvy = "0.15.7"
